feat(sonarlint): a custom fsm